--- a/page2.html
+++ b/page2.html
@@ -5,11 +5,9 @@
     <meta name="description" content="Contactez l'agence lyonnaise: la chouette agence. Nous sommes une agence de web design. Vous êtes une entrepise qui veux se dévelloper, devenir attractives et visibles sur internet, rejoingnez-nous !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
-    
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css-mini.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="css/reset.css">
+	
+	<link rel="stylesheet" type="text/css" href="style.css">
 	
     
 	<script src="./js/jquery-2.1.0.min.js"></script>
@@ -17,17 +15,17 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-	<title>Contact la chouette agence, l'agence web lyonnaise</title>
+	<title>Contact la chouette agence, entreprise web design sur lyon</title>
 	
-	<meta property="og:title" content="la chouette agence l'agence web sur lyon">
+	<meta property="og:title" content="Contact la chouette agence, entreprise web design sur lyon">
 	<meta property="og:type" content="article">
 	<meta property="og:url" content="https://ghislainvava.github.io./page2.html">
-	<meta property="og:image" content="img/logo-chouette-agence.png">
+	<meta property="og:image" content="img/la-chouette-agence.jpg">
 	<meta property="og:description" content="Contactez l'agence lyonnaise: la chouette agence. Nous sommes une agence de web design. Vous êtes une entrepise qui veux se dévelloper, devenir attractives et visibles sur internet, rejoingnez-nous !">
 	<!-- Twitter card -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:site" content="@Chouette Agence">
-	<meta name="twitter:title" content="Contact la chouette agence, l'agence web lyonnaise">
+	<meta name="twitter:title" content="Contact la chouette agence, entreprise web design sur lyon">
 	<meta name="twitter:description" content="Contactez l'agence lyonnaise: la chouette agence. Nous sommes une agence de web design. Vous êtes une entrepise qui veux se dévelloper, devenir attractives et visibles sur internet, rejoingnez-nous !">
 	<meta name="twitter:creator" content="@Chouette Agence">
 	<meta name="twitter:image" content="fa fa-twitter">
@@ -47,7 +45,7 @@
 
 
 <div class="bloc  bg-repeat bgc-atomic-tangerine  bloc-bg-texture texture-paper">
-	<div class=" bloc-lg">
+	<div class=" bloc-md">
 		<div class="row">
 			<div class="col-sm-12 social">
 				<h1>
@@ -62,12 +60,9 @@
 		</div>
 	</div>
 </div>
-
-
-
-	<div class=" bloc-lg">
-		<div class="row">
-			<div class="col-sm-6 ">
+											<!--Formualaire-->			
+		
+			<div>
 				<form  action="/ma-page-de-traitement" method="post">
 					<div class="form-group">
 						<label for="name">
@@ -94,21 +89,17 @@
 
 						</textarea>
 					</div> 
-					<button class="cta-hero btn-atomic-tangerine btn-rd btn-lg" type="submit">
+					<button class="cta-hero btn-atomic-tangerine btn-rd btn-lg" role="button" aria-pressed="false" onclick="handleBtnClick(event)" type="submit">
 						Envoyer
 					</button>
 					<div class="text-center">
 					<p >
-						La chouette agence l'entreprise webdesign sur lyon<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
+						La chouette agence l'entreprise web design sur lyon<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 					</p>
 					</div>
 				</form>
 			</div>
-		</div>
-	</div>
-
-
-
+		
 
 <!-- Footer - bloc-8 -->
 
