--- a/page2.html
+++ b/page2.html
@@ -92,7 +92,7 @@
 					<button class="cta-hero btn-atomic-tangerine btn-rd btn-lg" role="button" aria-pressed="false" onclick="handleBtnClick(event)" type="submit">
 						Envoyer
 					</button>
-					<div class="text-center">
+					<div class="center-bloc">
 					<p >
 						La chouette agence l'entreprise web design sur lyon<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 					</p>
