--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <meta name="keywords" content="site web, site internet, Entreprise design Lyon, aide les entreprises, se développer, devenir attractives et visibles, en créant un site de A à Z,  par une refonte">
 	
 	<!-- CSS -->
-	                                
-
+		
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 
 
 	<script src="./js/bootstrap.js"></script>
@@ -66,18 +64,20 @@
 																<!-- Services -->
 
 
-	<div class="center-bloc direction-col  bloc-md">
+	<div class="center-col  bloc-md">
 		<img src="img/logo.png" class="display-none  hg" alt="logo chouette colorer web design lyon entreprise"/>
+			
 			<h1>
 				La chouette agence, l'<strong>entreprise de web design sur Lyon</strong>
 			</h1>
 			<h2>
 				Aide les entreprises à devenir attractives et visibles sur Internet
 			</h2>
+			
 	</div>
 
 		<div class=" bloc-md">
-			<div class="center-bloc ">
+			<div class="services">
 				<div class="bloc-300-m">
 					<div class="center-bloc">
 						<div class="et-icon-bser sm-shadow icon-dark-slate-blue icons icon-lg "></div>
@@ -147,12 +147,12 @@
 <div class="bloc-mgtop">
 
 	
-		<div>
-			<div class="center-bloc">
-				<h2 class="mg-lg">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
-			</div>
+		
+		<div class="center-bloc">
+			<h2 class="mg-lg">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
 		</div>
-		<div class="tight-width-whitespace  center-bloc" >
+		
+		<div class="tight-width-whitespace  services" >
 			<div class="bloc-300-m">
 				<a href="#" data-lightbox="img/refonte-journal-local.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src=img/refonte-journal-local.jpg alt="refonte journal" class="img-responsive " /></a>
 				<h3 class="mg-md center-bloc">
@@ -172,7 +172,7 @@
 				</p>
 			</div>
 		</div>
-		<div class=" tight-width-whitespace center-bloc">
+		<div class=" tight-width-whitespace services">
 			<div class="bloc-300-m">
 				<a href="#" data-lightbox="img/voyageur-internet.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/voyageur-internet.jpg" class="img-responsive " alt="Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md center-bloc">
@@ -213,8 +213,8 @@
 																					<!-- Footer -->
 	
 		<div class=" bloc-sm">
-			<div class="row">
-				<h2 class="center-bloc ">
+			<div class="center-col">
+				<h2>
 					La chouette agence - <strong> Agence web basée à Lyon</strong>.
 				</h2>
 				<div class="bloc center-bloc">
