--- a/page2.html
+++ b/page2.html
@@ -66,7 +66,7 @@
 				<form  action="/ma-page-de-traitement" method="post">
 					<div class="form-group">
 						<label for="name">
-							Nom
+							Nom :
 						</label>
 						<input type="text" id="name" name="user_name" placeholder="Dupont" required/>
 					</div>
