rectif class nav
Signed-off-by: Vachet Ghislain <vachetghislain@MacMini2018.local>

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<header>
 			<img src="img/la-chouette-agence.jpg" alt="logo Entrepise web design lyon la chouette agence">
 			<nav>
-				<ul class="nave">
+				<ul >
 					<li>
 						<a href="index.html">Accueil</a>
 					</li>	
@@ -113,7 +113,7 @@
 				<div class="white">
 					<h3>Nous souhaitons aider les entreprises de la région Lyonnaise à se développer. Nous travaillons pour aider les entreprises locales. Nous aimons collaborer avec des entrepreneurs créatifs.</h3>
 					<p class="center-bloc">Alors si : </p>
-					<ul id="whiteUl">
+					<ul class="white">
 						<li><p>Vous avez besoin de créer un site de A à Z ou de donner un coup de jeune à votre site.</p></li>
 						<li><p>Vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site.</p></li>
 					</ul>
