maj display-none
Signed-off-by: Vachet Ghislain <vachetghislain@MacMini2018.local>

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 		<!-- background-presentation -->
 
-		<div class="display-none bloc bg-banniere bloc-bg-texture texture-paper bloc-gd b-parallax"></div>
+		<div class="bloc bg-banniere bloc-bg-texture texture-paper bloc-gd b-parallax"></div>
 
 		<!-- Services -->
 
