en avant guingamp
Signed-off-by: Vachet Ghislain <vachetghislain@MacMini2018.local>

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="bloc bg-banniere bloc-bg-texture texture-paper bloc-gd b-parallax"></div>
 
 		<!-- Services -->
-
+<div class="fond repeat">
 		<div class="center-col  bloc-md">
 			<img src="img/logo.png" class="display-none hg" alt="logo chouette colorer web design lyon entreprise"/>
 				<h1>
@@ -105,7 +105,7 @@
 				<p class="pdg">Maxime Guibard, PDG de À vos fourchettes</p>
 			</div>	
 		</div>
-
+	</div>
 		<!--Presentation-->
 
 		<div class="bloc  bgc-atomic-tangerine bg-presentation  bloc-bg-texture texture-paper parallax2">
@@ -124,7 +124,7 @@
 
 		<!-- portfolio -->
 
-		<div class="bloc-mgtop">
+		<div class="bloc-mgtop fond repeat">
 			<div class="center-bloc">
 				<h2 class="mg-lg">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>
 			</div>
